--- a/home.css
+++ b/home.css
@@ -1,4 +1,4 @@
-.titles, .presentation, .pitch, .funfact, .twitch {
+.titles, .presentation, .pitch, .funfact {
     max-width: 550px;
     margin: auto;
     padding: 50;
@@ -6,8 +6,17 @@
     line-height: 1.5;
 }
 
-.twitch{
-    margin-top: 500px;
+.twitch {
+    position: absolute;
+    top : 50%;
+    right: 33%;
+    border-radius: 17px;
+    background: linear-gradient(145deg, #6f1416, #5e1113);
+    height : 75px;
+    max-width: 550px;
+    padding : 10;
+    text-align: center;
+    margin: auto;
 }
 
 .titles {
